--- a/sprint_1/index.html
+++ b/sprint_1/index.html
@@ -78,6 +78,26 @@
             
             <li class="nav-item" data-level="1"><a href="#sprint1" class="nav-link">Sprint1</a>
               <ul class="nav flex-column">
+            <li class="nav-item" data-level="2"><a href="#installacii-so-ubuntu-24" class="nav-link">Instal·lacií SO Ubuntu 24</a>
+              <ul class="nav flex-column">
+              </ul>
+            </li>
+            <li class="nav-item" data-level="2"><a href="#configuracii-xarxa" class="nav-link">Configuracií Xarxa</a>
+              <ul class="nav flex-column">
+              </ul>
+            </li>
+            <li class="nav-item" data-level="2"><a href="#punts-de-restauracio" class="nav-link">Punts de restauració</a>
+              <ul class="nav flex-column">
+              </ul>
+            </li>
+            <li class="nav-item" data-level="2"><a href="#grub" class="nav-link">GRUB</a>
+              <ul class="nav flex-column">
+              </ul>
+            </li>
+            <li class="nav-item" data-level="2"><a href="#desinstalacio-apricacions" class="nav-link">Des/Instalacio Apricacions</a>
+              <ul class="nav flex-column">
+              </ul>
+            </li>
               </ul>
             </li>
         </ul>
@@ -85,7 +105,12 @@
 </div></div>
                     <div class="col-md-9" role="main">
 
-<h1 id="sprint1">Sprint1</h1></div>
+<h1 id="sprint1">Sprint1</h1>
+<h2 id="installacii-so-ubuntu-24">Instal·lacií SO Ubuntu 24</h2>
+<h2 id="configuracii-xarxa">Configuracií Xarxa</h2>
+<h2 id="punts-de-restauracio">Punts de restauració</h2>
+<h2 id="grub">GRUB</h2>
+<h2 id="desinstalacio-apricacions">Des/Instalacio Apricacions</h2></div>
             </div>
         </div>
 
