--- a/sprint_1/index.html
+++ b/sprint_1/index.html
@@ -78,7 +78,7 @@
             
             <li class="nav-item" data-level="1"><a href="#sprint1" class="nav-link">Sprint1</a>
               <ul class="nav flex-column">
-            <li class="nav-item" data-level="2"><a href="#installacii-so-ubuntu-24" class="nav-link">Instal·lacií SO Ubuntu 24</a>
+            <li class="nav-item" data-level="2"><a href="#installacio-ubuntu-2402" class="nav-link">Instal·lació Ubuntu 24.02</a>
               <ul class="nav flex-column">
               </ul>
             </li>
@@ -106,7 +106,22 @@
                     <div class="col-md-9" role="main">
 
 <h1 id="sprint1">Sprint1</h1>
-<h2 id="installacii-so-ubuntu-24">Instal·lacií SO Ubuntu 24</h2>
+<h2 id="installacio-ubuntu-2402">Instal·lació Ubuntu 24.02</h2>
+<p>Primer que tot, hem de comfigurar la maquina virtual.
+Les espesificacions que he posat son les següentes.</p>
+<p><img alt="foto1" src="../imatges/Captura%20de%20pantalla%20de%202024-09-23%2015-27-04.png" /></p>
+<p>Per a configurar la xarxa el que he fet a sigut crear una xarxa Nat.</p>
+<p><img alt="foto2" src="../imatges/Captura%20de%20pantalla%20de%202024-09-19%2012-09-54.png" /></p>
+<p>Tot seguit li he posat la ISO.</p>
+<p><img alt="foto3" src="../imatges/Captura%20de%20pantalla%20de%202024-09-22%2021-55-20.png" /></p>
+<p>Li indico la xarxa.</p>
+<p><img alt="foto4" src="../imatges/Captura%20de%20pantalla%20de%202024-09-19%2012-10-43.png" /></p>
+<p>Una vegada iniciada la maquina i fet el proses inicial li he indicat "instalació manual"</p>
+<p><img alt="foto5" src="../imatges/Captura%20de%20pantalla%20de%202024-09-23%2015-07-15.png" /></p>
+<p>Li he posat les següents partisions.</p>
+<p><img alt="foto6" src="../imatges/Captura%20de%20pantalla%20de%202024-09-19%2012-25-27.png" /></p>
+<p>Li dono a instal·lar i ja estaria.</p>
+<p><img alt="foto7" src="../imatges/Captura%20de%20pantalla%20de%202024-09-19%2012-26-23.png" /></p>
 <h2 id="configuracii-xarxa">Configuracií Xarxa</h2>
 <h2 id="punts-de-restauracio">Punts de restauració</h2>
 <h2 id="grub">GRUB</h2>
