--- a/index.html
+++ b/index.html
@@ -86,7 +86,11 @@
                     <div class="col-md-9" role="main">
 
 <h1 id="sistemes-informatics">Sistemes informatics</h1>
-<p><a href="https://creativecommons.org/share-your-work/cclicenses/"><img alt="CC" src="imatges/CC.png" /></a> pagina web amb llicencia Creative Commons. <a href="https://creativecommons.org/share-your-work/cclicenses/">Més Informació</a></p></div>
+<p><a href="https://creativecommons.org/share-your-work/cclicenses/1"> <br />
+<img src="imatges/CC.png" alt="CC" width="100" heigth="100">
+</a>
+pagina web amb llicencia Creative Commons
+<a href="https://creativecommons.org/share-your-work/cclicenses/">Més Informació</a></p></div>
             </div>
         </div>
 
@@ -169,5 +173,5 @@
 
 <!--
 MkDocs version : 1.5.3
-Build Date UTC : 2024-09-24 06:12:50.956222+00:00
+Build Date UTC : 2024-09-24 09:44:18.303342+00:00
 -->
