--- a/sprint_1/index.html
+++ b/sprint_1/index.html
@@ -140,6 +140,20 @@ Les espesificacions que he posat son les següentes.</p>
 <p>I fent ping podem veure com ens dona acces a internet.</p>
 <p><img alt="netplan6" src="../imatges/netplan/6.png" /></p>
 <h2 id="punts-de-restauracio">Punts de restauració</h2>
+<p>Per fer punts de restauració hem utilitzat un programa que es diu "Timeshift"</p>
+<p>El primer que hem fet ha sigut instal·lar el programa amb la comanda "sudo apt install timeshift"</p>
+<p><img alt="Prestauracio1" src="../imatges/Prestaurasio/1.png" /></p>
+<p>Una vegada instal·lada entrem dintre.</p>
+<p><img alt="Prestauracio2" src="../imatges/Prestaurasio/2.png" /></p>
+<p>Ens dona a elegir entre dues opcions, RSYNC i BTRFS. Escollim la primera opció.</p>
+<p><img alt="Prestauracio3" src="../imatges/Prestaurasio/3.png" /></p>
+<p>Seleccionem el lloc on volem que es guardin les nostres instantànies.</p>
+<p><img alt="Prestaruacio4" src="../imatges/Prestaurasio/4.png" /></p>
+<p>Li indiquem quan volem que es faci la instantània i el número d'instantànies que volem guardar.</p>
+<p><img alt="Prestaruacio5" src="../imatges/Prestaurasio/5.png" /></p>
+<p>Li indiquem que volem guardar el directori "/home".</p>
+<p><img alt="Prestaruacio6" src="../imatges/Prestaurasio/6.png" /></p>
+<p>Hi ha una altra forma en el Ubuntu 24.04. Pero nomes deixa fer instantanies de directoris, no de tot el sistema. La manera consisteix en una funcio nova que porta el Ubuntu 24.04, que es nomes si el gestor de fitxers es el BTRFS, i no el ext4 com a sigut fins ara.</p>
 <h2 id="grub">GRUB</h2>
 <h2 id="desinstalacio-apricacions">Des/Instalacio Apricacions</h2></div>
             </div>
