--- a/sprint_1/index.html
+++ b/sprint_1/index.html
@@ -155,6 +155,27 @@ Les espesificacions que he posat son les següentes.</p>
 <p><img alt="Prestaruacio6" src="../imatges/Prestaurasio/6.png" /></p>
 <p>Hi ha una altra forma en el Ubuntu 24.04. Pero nomes deixa fer instantanies de directoris, no de tot el sistema. La manera consisteix en una funcio nova que porta el Ubuntu 24.04, que es nomes si el gestor de fitxers es el BTRFS, i no el ext4 com a sigut fins ara.</p>
 <h2 id="grub">GRUB</h2>
+<p>Per a aquesta practica el que hem fet primer que tot ha sigut esborrar el grub manualment.</p>
+<p><img alt="Grepair1" src="../imatges/bootrepair/2.png" /></p>
+<p>A continuació he provat a inciar el sistema per veure si m'he carregat el Grub.</p>
+<p><img alt="Grepair2" src="../imatges/bootrepair/4.png" /></p>
+<p>Tots seguit apagem la VM i li introduim la ISO del "Bootrepair"</p>
+<p><img alt="Grepair3" src="../imatges/bootrepair/5.png" /></p>
+<p>Cuan se'ns obri el programa, li indiquem que volem reparar.</p>
+<p><img alt="Grepair4" src="../imatges/bootrepair/9.png" /></p>
+<p>Per ultim se'ns obrira el sistema i ja estara reparat.</p>
+<p><img alt="Grepair5" src="../imatges/bootrepair/12.png" /></p>
+<p>Per a l'altre programa l'inici a sigut el mateix. Carregar-nos el "Grub" de forma manual i incerir la ISO del super grub.
+Una vegada iniciat el programa, el que hem de fer es donar-li clic a "Boot manually".</p>
+<p><img alt="Sgrub1" src="../imatges/grub2/1.png" /></p>
+<p>Tot seguit li donem clic a "Operating Systems".</p>
+<p><img alt="Sgrub2" src="../imatges/grub2/2.png" /></p>
+<p>A continuació indiquem la primera opció.</p>
+<p><img alt="Sgrub3" src="../imatges/grub2/3.png" /></p>
+<p>Una vegada dintre del sistema tenim que instal·lar el grub de forma manual.</p>
+<p><img alt="Sgrub4" src="../imatges/grub2/4.png" /></p>
+<p>I per últim upgradegem el grub.</p>
+<p><img alt="Sgrub5" src="../imatges/grub2/5.png" /></p>
 <h2 id="desinstalacio-apricacions">Des/Instalacio Apricacions</h2></div>
             </div>
         </div>
