--- a/sprint_1/index.html
+++ b/sprint_1/index.html
@@ -176,7 +176,58 @@ Una vegada iniciat el programa, el que hem de fer es donar-li clic a "Boot manua
 <p><img alt="Sgrub4" src="../imatges/grub2/4.png" /></p>
 <p>I per últim upgradegem el grub.</p>
 <p><img alt="Sgrub5" src="../imatges/grub2/5.png" /></p>
-<h2 id="desinstalacio-apricacions">Des/Instalacio Apricacions</h2></div>
+<h2 id="desinstalacio-apricacions">Des/Instalacio Apricacions</h2>
+<p>Hi ha diverses maneres d'instal·lar programes en Ubuntu, aquestes són algunes:</p>
+<h3 id="dpkg">dpkg</h3>
+<p>Per a instal·lar programes amb dpkg el que hem de fer, primer es descarregarnos un fitxer .deb per a posteriorment posar la segunet comanda:</p>
+<p><img alt="dpkg" src="../imatges/dpkg/1.png" /></p>
+<p>I podem exectuar el programa amb el nom del mateix.</p>
+<p><img alt="dpkg" src="../imatges/dpkg/2.png" /></p>
+<h3 id="apt-repositori">Apt Repositori</h3>
+<p>Primer que tot he actualitzat el sistema amb una comanda que emborrara automàticament els packets que no s'utilitzen.</p>
+<p><img alt="AptR" src="../imatges/Apt-%20repositori/1.png" /></p>
+<p>A continuació hem de instal·lar la dependencia per a poder afegir el repositori de VirtualBox.</p>
+<p><img alt="AptR" src="../imatges/Apt-%20repositori/3.png" /></p>
+<p>Tot seguit li hem de afegir el repositori.</p>
+<p><img alt="AptR" src="../imatges/Apt-%20repositori/4.png" /></p>
+<p>I creem y afegim una clau al repositori.</p>
+<p><img alt="AptR" src="../imatges/Apt-%20repositori/5.png" /></p>
+<p>Actualitzem el sistema per a que es guardin el camvis.</p>
+<p><img alt="AptR" src="../imatges/Apt-%20repositori/6.png" /></p>
+<p>Per acabar instal·lem el VirtualBox.</p>
+<p><img alt="AptR" src="../imatges/Apt-%20repositori/7.png" />
+<img alt="AptR" src="../imatges/Apt-%20repositori/8.png" /></p>
+<p>Una vegada instal·lat el que hem fet a sigut desisntal·larlo.</p>
+<p><img alt="AptR" src="../imatges/Apt-%20repositori/9.png" />
+<img alt="AptR" src="../imatges/Apt-%20repositori/10.png" />
+<img alt="AptR" src="../imatges/Apt-%20repositori/11.png" /></p>
+<h3 id="aptitude">Aptitude</h3>
+<p>Tot seguit el que hem fet a sigut instal·lar el gimp utilitzant Aptitude. Per fer-ho el primer que hem fet ha sigut instal·lar el aptitude.</p>
+<p><img alt="Aptitude" src="../imatges/aptitude/1.png" /></p>
+<p>A continuació utilitzat la comanda aptitude hem instal·lat el gimp.</p>
+<p><img alt="Aptitude" src="../imatges/aptitude/2.png" />
+<img alt="Aptitude" src="../imatges/aptitude/3.png" /></p>
+<p>Per ultim he desinstal·lat el gimp.</p>
+<p><img alt="Aptitude" src="../imatges/aptitude/4.png" /></p>
+<h3 id="targz">tar.gz</h3>
+<p>El primer que hem de fer és instal·lar el fitxer tar.gz des de la paguina oficial de discord.</p>
+<p><img alt="tar.gz" src="../imatges/tar.gz/1.png" /></p>
+<p>A continuació hem de descomprimir el fitxer.</p>
+<p><img alt="tar.gz" src="../imatges/tar.gz/2.png" /></p>
+<p>Hem de moure el fitxer Discord al directori /opt/.</p>
+<p><img alt="tar.gz" src="../imatges/tar.gz/3.png" /></p>
+<p>Per acabar posem aquesta comanda i executem discord.</p>
+<p><img alt="tar.gz" src="../imatges/tar.gz/4.png" />
+<img alt="tar.gz" src="../imatges/tar.gz/5.png" />
+<img alt="tar.gz" src="../imatges/tar.gz/6.png" /></p>
+<h3 id="dawngrade">dawngrade</h3>
+<p><img alt="dawngrade" src="../imatges/dawngrade/1.png" />
+<img alt="dawngrade" src="../imatges/dawngrade/2.png" />
+<img alt="dawngrade" src="../imatges/dawngrade/3.png" />
+<img alt="dawngrade" src="../imatges/dawngrade/4.png" />
+<img alt="dawngrade" src="../imatges/dawngrade/5.png" />
+<img alt="dawngrade" src="../imatges/dawngrade/6.png" />
+<img alt="dawngrade" src="../imatges/dawngrade/7.png" /></p></div>
             </div>
         </div>
 
