--- a/sprint_1/index.html
+++ b/sprint_1/index.html
@@ -220,13 +220,19 @@ Una vegada iniciat el programa, el que hem de fer es donar-li clic a "Boot manua
 <p><img alt="tar.gz" src="../imatges/tar.gz/4.png" />
 <img alt="tar.gz" src="../imatges/tar.gz/5.png" />
 <img alt="tar.gz" src="../imatges/tar.gz/6.png" /></p>
-<h3 id="dawngrade">dawngrade</h3>
-<p><img alt="dawngrade" src="../imatges/dawngrade/1.png" />
-<img alt="dawngrade" src="../imatges/dawngrade/2.png" />
-<img alt="dawngrade" src="../imatges/dawngrade/3.png" />
-<img alt="dawngrade" src="../imatges/dawngrade/4.png" />
-<img alt="dawngrade" src="../imatges/dawngrade/5.png" />
-<img alt="dawngrade" src="../imatges/dawngrade/6.png" />
+<h3 id="escollir-versio">Escollir versió</h3>
+<p>Primer que tot mirem la versió que tenim instal·lada del smplayer.</p>
+<p><img alt="dawngrade" src="../imatges/dawngrade/1.png" /></p>
+<p>A continuació el que hem fet ha sigut afegir el repositori smplayer.</p>
+<p><img alt="dawngrade" src="../imatges/dawngrade/2.png" /></p>
+<p>Hem actualitzat el sistema.</p>
+<p><img alt="dawngrade" src="../imatges/dawngrade/3.png" /></p>
+<p>Al tornar a veure la versio es pot veure que esta actualitzat.</p>
+<p><img alt="dawngrade" src="../imatges/dawngrade/4.png" /></p>
+<p>Per tornar a la versió anterior el que hem de fer es afegir les seguents linies de codi en el fitxer: etc/apt/preferences.d</p>
+<p><img alt="dawngrade" src="../imatges/dawngrade/5.png" /></p>
+<p>Podem veure com a cambiat la prioritat de les versions.</p>
+<p><img alt="dawngrade" src="../imatges/dawngrade/6.png" />
 <img alt="dawngrade" src="../imatges/dawngrade/7.png" /></p></div>
             </div>
         </div>
